<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017-2025 klnvch
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources xmlns:ns0="urn:oasis:names:tc:xliff:document:1.2" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Link Five Dots</string>
    <string name="language">English</string>
    <string name="greetings">Hi, %1$s!</string>
    <string name="scores_title">Scores</string>
    <string name="scores_moves">Turns</string>
    <string name="scores_won">won</string>
    <string name="scores_lost">lost</string>
    <string name="end_win">You Win!</string>
    <string name="end_lose">You Lose.</string>
    <string name="menu_single_player">Single Player</string>
    <string name="menu_multi_player">Multiplayer</string>
    <string name="menu_two_players">Two players</string>
    <string name="menu_local_network">Local Area Network</string>
    <string name="menu_online_game">Internet</string>
    <string name="settings_dots">Dots</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="bt_message_your_turn">Your Turn!</string>
    <string name="bt_message_opponents_turn">Waiting on opponent…</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>


    <string name="how_to_text">
        \t
        Be the first to link five dots in a straight line horizontally, vertically or diagonally.
        Android plays blue dots, you play red dots. Red and blue dots are put in turn on the line
        intersections. The first move is yours.
        \n\n\t
        Drag the screen to move the grid.
        \n\t
        Scale the screen to enlarge or reduce grid size.
        \n\t
        Use menu to restart the game, undo last move, see game scores or see how to play.
        \n\t
        Press \"Search\" button to hide/show arrows around the last move dot.</string>


    <string name="scores_number" translatable="false">#</string>
    <string name="btn_github" translatable="false">GitHub</string>
    <string name="colon" translatable="false">:</string>


    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="done">Done</string>
    <string name="confirmation_turn_on">Turn on</string>
    <string name="create">Create</string>
    <string name="unknown">Unknown</string>
    <string name="settings_system">System</string>
    <string name="disconnected">Disconnected</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_is_discoverable">Visible to all nearby Bluetooth devices (<ns0:g id="discoverable_time_period">%1$s</ns0:g>)</string>
    <string name="bluetooth_only_visible_to_paired_devices">Only visible to paired devices</string>
    <string name="bluetooth_devices_card_off_title">Bluetooth is off</string>
    <string name="bluetooth_devices_card_off_summary">Tap to turn it on</string>
    <string name="runtime_permissions_summary_no_permissions_granted">No permissions granted</string>
    <string name="wifi_settings_primary_switch_title">Use Wi\u2011Fi</string>
    <string name="audio_sharing_retry_dialog_content">Something went wrong. Please try again.</string>
    <string name="wifi_p2p_disconnect_title">Disconnect?</string>
    <string name="connection_dialog_text">"Do you want to connect to \u0022<ns0:g id="device_name">%1$s</ns0:g>\u0022?"</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="time">Time</string>
    <string name="connecting_error_message">Couldn\u2019t connect to <ns0:g id="device_name">%1$s</ns0:g>.</string>
    <string name="searching">Searching\u2026</string>
    <string name="connect_failed">Couldn\'t connect. Try again.</string>
    <string name="connected">Connected</string>
    <string name="scan">Scan</string>
    <string name="status">Status</string>
    <string name="search">Search</string>
    <string name="search_no_results">No results</string>
    <string name="settings_night_mode">Night Light</string>
    <string name="name_not_set">Not set</string>
    <string name="name">Name</string>
    <string name="main_clear_title">Erase all data</string>
    <string name="main_clear_confirm_title">Erase all data?</string>
    <string name="progress_text">Please wait…</string>
    <string name="help">Help</string>
    <string name="loading">Loading\u2026</string>
    <string name="application_info_label">App info</string>
    <string name="version_text">version <ns0:g id="version_num">%1$s</ns0:g></string>
    <string name="settings_language">Languages</string>
    <string name="settings_auto">Automatic</string>
    <string name="settings">Settings</string>
    <string name="duration">Duration</string>
    <string name="connecting">Connecting\u2026</string>
    <string name="delete">Delete</string>
    <string name="type">Type</string>
    <string name="settings_vibration">Vibrations</string>
    <string name="switch_on_text">On</string>
    <string name="switch_off_text">Off</string>
    <string name="share">Share</string>
    <string name="computer">Computer</string>
    <string name="error_feature_not_available">This feature is not available on this device</string>
    <string name="deleted_toast">None<ns0:g id="name">%1$s</ns0:g> deleted</string>
    <string name="send_mail">Send email</string>
    <string name="copy_text">Copy to clipboard</string>
    <string name="toast_text_copied">Text copied</string>
    <string name="new_game">New</string>
    <string name="undo">Undo</string>
    <string name="connection_error_message">No connection</string>
    <string name="username">Name</string>
    <string name="history">History</string>

    <string name="posted_just_now">"Just now"</string>
    <!-- Abbreviated message to express that something occurred some number of minutes in the past (e.g., 5 minutes ago). -->
    <plurals name="num_minutes_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> min</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <!-- Abbreviated message to express that something occurred some number of hours in the past (e.g., 5 hours ago). -->
    <plurals name="num_hours_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> hour</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <!-- Abbreviated message to express that something occurred some number of days in the past (e.g., 5 days ago). -->
    <plurals name="num_days_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> day</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
</resources>
