<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 klnvch
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/paper_tiled"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/btn_table_padding">

    <Button
        android:id="@+id/multi_player_two_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:drawableLeft="@drawable/ic_people_48dp"
        android:drawableStart="@drawable/ic_people_48dp"
        android:onClick="onClick"
        android:text="@string/two_players"
        android:textColor="@color/black"
        android:textSize="@dimen/bt_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/multi_player_bluetooth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:drawableLeft="@drawable/ic_bluetooth_48dp"
        android:drawableStart="@drawable/ic_bluetooth_48dp"
        android:onClick="onClick"
        android:text="@string/bluetooth_settings"
        android:textColor="@color/black"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/multi_player_lan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:drawableLeft="@drawable/ic_router_48dp"
        android:drawableStart="@drawable/ic_router_48dp"
        android:onClick="onClick"
        android:text="@string/menu_local_network"
        android:textColor="@color/black"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/multi_player_online"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:drawableLeft="@drawable/ic_public_48dp"
        android:drawableStart="@drawable/ic_public_48dp"
        android:onClick="onClick"
        android:text="@string/menu_online_game"
        android:textColor="@color/black"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold"
        android:visibility="visible" />

</LinearLayout>