...
            android:visibility="@{bluetoothPickerViewState == null ? View.GONE : bluetoothPickerViewState.scanPermissionMessageVisibility}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonScanCancel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listTargets"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:items="@{viewState.scanning.discoveredItems}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textScanNoPermission" />

        <TextView
            android:id="@+id/textWarningEmpty"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_no_results"
            android:visibility="@{viewState.scanning.isEmptyMessageVisible ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
...
